--- a/test/fixtures/gifts.yml
+++ b/test/fixtures/gifts.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  user_id: 1
+  person_id: 1
   product_id: 1
   comment: MyString
 
 two:
-  user_id: 1
+  person_id: 1
   product_id: 1
   comment: MyString
